@@ -11,6 +11,7 @@
 * Added the support for color spaces (Nop, LuxCore and OpenColorIO) to constant textures
 * Added the support for color spaces (Nop, LuxCore and OpenColorIO) to implicit definitions of constant textures
 * Added the support for color spaces (Nop, LuxCore and OpenColorIO) to materials
+* Added the support for color spaces (Nop, LuxCore and OpenColorIO) to light sources
 * FILESAVER avoids to save the internal random image map (used by randomized tiling)
 
 ### Fixed Bugs
